minor README update

--- a/README
+++ b/README
@@ -3,8 +3,8 @@ XDBF-Manager is a cross-platform application built using the Qt framework, that 
 Created by Stevie Hetelekides(Hetelek/sh042067) and Adam Spindler(Experiment5X),
 
 LICENSING INFORMATION:
-XDBF Manager is licensed and distributed under the GNU General Public License (v3).
+XDBF-Manager is licensed and distributed under the GNU General Public License (v3).
 
-XDBF Manager is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+XDBF-Manager is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 
 If no copy of the GNU General Public License was recieved with this program (FILE: COPYING), it is available at <http://www.gnu.org/licenses/>.
